Fix header size on mobile

--- a/compass/sass/partials/_base.sass
+++ b/compass/sass/partials/_base.sass
@@ -31,7 +31,7 @@ $base-letter-spacing:   0
 $wide-font-size:        18px
 
 $site-header-font-family: "Lobster", sans-serif
-$site-header-font-size:   2em
+$site-header-font-size:   36px
 $site-header-line-height: 1em
 $site-header-diameter:    150px
 
