--- a/compass/sass/partials/_typography.sass
+++ b/compass/sass/partials/_typography.sass
@@ -9,9 +9,6 @@ $blueprint-font-family: $base-font-family
   a
     color: $site-header-bg
 
-  .logo
-    font-size: 1em
-
   .logo a
     font-family: $site-header-font-family
     font-size:   $site-header-font-size
