--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -769,12 +769,9 @@ header {
 header a {
   color: #cc2222;
 }
-header .logo {
-  font-size: 1em;
-}
 header .logo a {
   font-family: "Lobster", sans-serif;
-  font-size: 2em;
+  font-size: 36px;
   line-height: 1em;
   font-style: normal;
   text-decoration: none;
